styles.css
header, nav, footer, article{
  font-family: 'Open Sans', 'Helvetica', sans-serif;
  margin-top: 30px;
}

header {
  text-align: center;
  padding: 0.5em 5% 0;
  font-weight: 300;
  font-size: 3.5em;
  color: #2196f3;
  width: 25%;
  float: left;
}

nav {
  float: right;
  width: 57%;
  text-align: right;
  padding: 60px 3% 0px;
  font-size: 1.4em;
  text-align: right;
}

nav a:link, a:visited{
  color: #2196f3;
  text-decoration: none;
  padding-left: 1em;
  padding-right: 1em;
}

nav a:hover, a:active{
  color: #0d47a1;
  text-decoration: none;
}

/* Clear floats after the columns */
section:after {
    content: "";
    display: table;
    clear: both;
}

picture {
  text-align: center;
  width: 25%;
  float:left;
  margin: 80px 5%;
}

article {
  float: right;
  text-align: justify;
  width: 57%;
  padding: 40px 3% 0px;
  color: #0d47a1;
}

footer {
  float: left;
  width: 100%;
  font-size: 11px;
  color: #2196f3;
  text-align: center;
}

footer a:link, a:visited{
  color: #2196f3;
  text-decoration: none;
}

footer a:hover, a:active{
  color: #0d47a1  ;
  text-decoration: none;
}

/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
@media (max-width: 900px) {
    header, nav {
        width: 100%;
        float: left;
      }

      header {
        font-size: 2.5em;
      }

      nav {
        width: 94%;
        text-align: center;
        padding-left: 3%;
        padding-right: 3%;
        font-size: 1em;
      }

      article {
        width: 94%;
        padding: 0 3% 0;
      }

      picture {
        width: 100%;
        padding: 20px 0 0;
      }
}

